added some changes to group and post forms, and new css features

--- a/groups/templates/groups/group_form.html
+++ b/groups/templates/groups/group_form.html
@@ -4,7 +4,7 @@
 {% block group_content %}
 <div class="container-fluid">
   <center>
-    <h2 class="btn-primary py-1">Create A New Group</h2>
+    <h2 class="py-3">Create A New Group</h2>
     <form method="POST" action="{% url 'groups:create' %}" id="groupForm">
       {% csrf_token %}
       <div class="btn btn-outline-info py-2">
