--- a/static/css/main.css
+++ b/static/css/main.css
@@ -15,13 +15,14 @@
   }
 
  .nav-item {
-  font-size: 1.6rem;
+  font-size: 1.45rem;
  }
 
  .profile-nav, .login-nav {
   height: 50px;
-  width: 105px;
+  width: 120px;
   font-size: 1.4rem;
+  margin-left: 5px;
  }
   
   #note {
@@ -59,18 +60,23 @@
 
 .navbar-brand {
   font-family: "Ubuntu", serif;
-  font-size: 3rem;
+  font-size: 2.7rem;
   font-weight: 900;
-  color: rgb(11, 213, 245);
+  color: rgb(4, 153, 245);
 }
 
 .navbar {
-  background-color: #F2DEBA;
+  background-color: #C0EEE4;
 }
 
 textarea {
-  width: 100%;
+  font-size: 1.2rem;
+  width: 70%;
   height: 300px;
+  font-family:sans-serif;
+  font-style: inherit;
+  padding: 5px 5px 2px 5px;
+  background-color: #E3F6FF;
 }
 
 .welcome-username {
