--- a/templates/base.html
+++ b/templates/base.html
@@ -33,15 +33,15 @@
                     <a class="nav-link {% if request.path == home_page_url %} active {% endif %}" aria-current="page" href="{{ home_page_url }}">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-2" href="{% url 'groups:all' %}" class="btn btn-simple">Groups</a>
+                    <a class="nav-link mx-2" href="{% url 'groups:all' %}">Groups</a>
                 </li>
                 
                 {% if request.user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link mx-2" href="{% url 'posts:create' %}" class="btn btn-primary">Post</a>
+                    <a class="nav-link mx-2" href="{% url 'posts:create' %}">Post</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-2" href="{% url 'groups:create' %}" class="btn btn-simple">Create Group</a>
+                    <a class="nav-link mx-2" href="{% url 'groups:create' %}">Create Group</a>
                 </li>
             </ul>
 
@@ -87,7 +87,7 @@
     </div>
 
     <canvas id="canvas"></canvas>
-    <script src="{% static "uzgeeks-social/js/main.js"%}" type="text/javascript" ></script>
+    <script src="{% static "js/main.js"%}" type="text/javascript" ></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
