add allowed hosts, change background color, removed junk codes.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -7,7 +7,7 @@
     height: 100%;
     width: 100%;
     overflow: auto;
-    background: #495579;
+    background: #4c5a84;
     margin: 0;
     color: antiquewhite;
     padding-top: 15px;
