--- a/posts/templates/posts/post_confirm_delete.html
+++ b/posts/templates/posts/post_confirm_delete.html
@@ -2,17 +2,15 @@
 {% load crispy_forms_tags %}
 
 {% block post_content %}
-<h3>Are you sure you want to delete this post?</h3>
+<center>
+	<h1>Are you sure you want to delete this post?</h1>
+	<form method="POST">
+		{% csrf_token %}
+		<br>
+		<input type="submit" value="Confirm" class="btn btn-danger mx-2">
+		<a href="{% url 'posts:single' username=user.username pk=object.pk %}" class="ml-4 btn btn-light btn-outline-success">Cancel</a>
+	</form>
+</center>
 
-<div class="posts">
-	{% include "posts/_post.html" with post=object hide_delete=True %}
-</div>
-
-<form method="POST">
-	{% csrf_token %}
-	<br>
-	<input type="submit" value="Confirm Delete" class="btn btn-danger btn-lg">
-	<a href="{% url 'posts:single' username=user.username pk=object.pk %}" class="ml-4 btn btn-light btn-lg btn-outline-success">Cancel</a>
-</form>
 
 {% endblock %}
