--- a/templates/base.html
+++ b/templates/base.html
@@ -12,60 +12,63 @@
     <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    
     <!--Font-->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
     <!--LOCAL CSS-->
     <link rel="stylesheet" href='{% static "css/main.css" %}' type="text/css">
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg mb-2" role="navigation" id="navbar">
-      <div class="container-fluid">
-        <a class="navbar-brand ms-5" href="{% url 'home_page' %}">Uz-Geeks Social</a>
-        
+    <nav class="navbar navbar-expand-lg mb-2 border-bottom" role="navigation" id="navbar">
+        <a class="navbar-brand ms-5" href="{% url 'home_page' %}">Uzgeeks</a>
+         
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             Menu
             <span class="navbar-toggler-icon"></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 list-unstyled">
+
                 <li class="nav-item">
-                    <a class="nav-link {% if request.path == home_page_url %} active {% endif %}" aria-current="page" href="{{ home_page_url }}">Home</a>
+                    <a class="nav-link {% if request.path == home_page_url %} active {% endif %}" aria-current="page" href="{{ home_page_url }}">Home <i class="bi bi-house-door-fill"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-2" href="{% url 'groups:all' %}">Groups</a>
+                    <a class="nav-link mx-2 {% if request.path == '#' %} active {% endif %}" href="#"> <i class="bi bi-stars stars-icon"></i> Quiz <i class="bi bi-stars stars-icon"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link mx-2 {% if request.path == 'groups:all' %} active {% endif %}" href="{% url 'groups:all' %}">Groups</a>
                 </li>
                 
                 
                 <li class="nav-item">
-                    <a class="nav-link mx-2" href="{% url 'posts:create' %}">Post</a>
+                    <a class="nav-link mx-2 {% if request.path == 'posts:create' %} active {% endif %}" href="{% url 'posts:create' %}">Post</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link mx-2" href="{% url 'groups:create' %}">Create Group</a>
+                    <a class="nav-link mx-2 {% if request.path == 'groups:create' %} active {% endif %}" href="{% url 'groups:create' %}">Create Group</a>
                 </li>
-            </ul>
-            {% if request.user.is_authenticated %}
-            <div class="me-5">
-            <!--RIGHT SIDE IN THE NAVBAR-->
-                <ul class="navbar-nav list-unstyled">
-                    <li class="nav-item dropdown">
+            
+                {% if request.user.is_authenticated %}
+                <!--Profile DropDown IN THE NAVBAR-->
+                    <li class="nav-item dropdown me-5">
                         <a class="profile-nav btn btn-primary dropdown-toggle {% if request.path == profile_page_url or request.path == profile_edit_page_url %} active {% endif %} " href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        {{ request.user.username }}
+                            <i class="bi bi-person-circle profile-icon"></i>{{ request.user.username }}
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="{{ profile_page_url }}">Profile</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="{% url 'accounts:logout' %}">Log out</a></li>
+                            <li><a class="dropdown-item text-danger" href="{% url 'accounts:logout' %}">Log out</a></li>
                         </ul>
                     </li>
-                </ul>
                 {% else %}
                     <a class="login-nav btn btn-primary" href="{% url 'accounts:login' %}">Login</a>
                 {% endif %}
-            </div>
+            </ul>
         </div>
-      </div>
     </nav>
 
     <div class="container mt-5">
