--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,7 @@
 /* ANIMATON */
 @keyframes color-change {
   0% { color: #301E67; }
+  0% { color: #345E67; }
   15% { color: #B05A7A; }
   25% { color: #222222; }
   35% { color: #E8AA42; }
