--- a/groups/templates/groups/group_detail.html
+++ b/groups/templates/groups/group_detail.html
@@ -2,34 +2,45 @@
 
 {% block pregroup %}
 <div class="container">
-	<center>
-		<h1 class="group_name_detail btn-light btn-large py-2">{{ group.name }}</h1>
-	</center>
-  <h2> Member Count: {{group.members.count}}</h2>
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card bg-light border-0">
+        <div class="card-body text-center">
+          <h1 class="group_name_detail">{{ group.name }}</h1>
+          <hr>
+          <h4 class="card-subtitle mb-2 text-muted">Member Count: {{group.members.count}}</h4>
 
-  <div class="content">
-  	{% if user in group.members.all %}
-  		<a href="{% url 'groups:leave' slug=group.slug %}" class="btn btn-lg btn-warning"><span class="fa fa-times-circle-o"></span> Leave</a>
-  	{% else %}
-  		<a href="{% url 'groups:join' slug=group.slug %}" class="btn btn-lg btn-success"><span class="fa fa-check-circle-o"></span> Join</a>
-  	{% endif %}
-
+          <div class="content mt-4">
+            {% if user in group.members.all %}
+            <a href="{% url 'groups:leave' slug=group.slug %}" class="btn btn-lg btn-danger"><span class="fa fa-times-circle-o"></span> Leave Group</a>
+            {% else %}
+            <a href="{% url 'groups:join' slug=group.slug %}" class="btn btn-lg btn-success"><span class="fa fa-check-circle-o"></span> Join Group</a>
+            {% endif %}
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 {% endblock %}
 
 {% block group_content %}
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card bg-light border-0">
+        <div class="card-body">
+          {% if group.posts.count == 0 %}
+          <h2>No posts in this group yet!</h2>
 
-<div class="col-md-12">
-	{% if group.posts.count == 0 %}
-	<h2>No posts in this group yet!</h2>
-
-	{% else %}
-
-		{% for post in group.posts.all %}
-			{% include "posts/_post.html" %}
-		{% endfor %}
-
-	{% endif %}
+          {% else %}
+          {% for post in group.posts.all %}
+          {% include "posts/_post.html" %}
+          {% endfor %}
+          {% endif %}
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 {% endblock %}
